# manim-preview

./: README.md  main.py  pyproject.toml
doc/: README-cn.md  README-en.md
manim_preview/: __init__.py  __main__.py
manim_preview/_config/: __init__.py  config.py  logger.py  mpconfig.toml  utils.py
manim_preview/core/: __init__.py  app.py  process.py  watch.py
manim_preview/static/: index.html  script.js  style.css
manim_preview/utils/: __init__.py  atomic_status_container.py
